  triggered by some widgets e.g. Checkbox(), Selectable() and many others, which
  cleared ActiveId at the same time as editing. (#9028)
  Note that IsItemDeactivatedAfterEdit() was not affected, only IsItemEdited).
- Misc: standardized casing of keyboard mods in comments and demo, showing
  as e.g. "Ctrl" instead of "CTRL".
- Drag and Drop:
  - Added ImGuiDragDropFlags_AcceptDrawAsHovered to make accepting item render
    as hovered, which can allow using e.g. Button() as drop target. (#8632)
  - Pressing Escape while carrying a payload automatically cancel the
    active drag and drop. (#9071)
  - Style: added ImGuiCol_DragDropTargetBg, style.DragDropTargetRounding,
    style.DragDropTargetBorderSize and style.DragDropTargetPadding to configure
    the drop target highlight. (#9056) [@aaronkirkham]
- Demo: About Box: emit infos to convey when IM_ASSERT() macro is disabled,
  - so users don't miss out on programming errors being reported.
  - so it is included in config/build info submitted in new GitHub Issues.
- Debug Tools:
   - Fixed DebugTextEncoding() potentially reading out of bounds when
     provided a trailing truncated UTF-8 sequence.
   - Metrics: fixed table and columns rect highlight from display when
     debug/metrics window is not in the same viewport as the table.
- Backends:
  - Null: added imgui_impl_null platform/renderer backend.
    This is designed if you need to run e.g. context with no input or no ouput.
  - GLFW: fixed building on Linux platforms where Wayland headers
    are not available. (#9024, #8969, #8921, #8920) [@jagot]
  - GLFW: lower minimum requirement from GLFW 3.1 to GLFW 3.0. Though
    a recent version e.g GLFW 3.4 is highly recommended! (#9055) [@Clownacy]
  - GLFW: fixed last `ImGui_ImplGlfw_Shutdown()` not immediately clearing the context
    map, which would be detected by leak trackers. (#9075, #8676, #8239, #8069) [@erincatto]
  - SDL3: fixed Platform_OpenInShellFn() return value (the return value